--- a/Projeto_React/dt-money/package.json
+++ b/Projeto_React/dt-money/package.json
@@ -6,17 +6,20 @@
   "scripts": {
     "dev": "vite",
     "dev:server": "json-server server.json -p 3333 -w -d 500",
+    "lint": "eslint src --ext .tsx,.ts",
+    "lint:fix": "eslint src --ext .tsx,.ts --fix",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/is-prop-valid": "^1.2.1",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-radio-group": "^1.1.3",
     "@rocketseat/eslint-config": "^2.1.0",
+    "@types/styled-components": "^5.1.34",
     "axios": "^1.6.5",
-    "json-server": "^1.0.0-alpha.22",
+    "json-server": "^0.17.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
